--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background: url('https://s3.amazonaws.com/pbblogassets/uploads/2017/02/09153006/SE-COVER.jpg') fixed;
+  
 }
 
 header {
