--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ button:hover, button:focus {
   font-size: 20px;
   padding-left: 5%;
   padding-right: 5%;
+  padding-top: 20px;
   display: block;
   text-align: center;
 }
@@ -123,4 +124,10 @@ input[type=radio] {
   margin-left: auto;
   margin-right: auto;
 }
+}
+
+@media screen and (min-width: 1300px) {
+  body {
+    font-size: 125%;
+  }
 }
